<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.LoginActivity"
    android:background="@drawable/fondo2colores">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:src="@drawable/imagen" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/log_txt_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/log_txt_correo"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:maxLength="20"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <EditText

                android:id="@+id/log_txt_clave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/log_txt_clave"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:maxLength="16"

                />
        </com.google.android.material.textfield.TextInputLayout>
        <CheckBox
            android:id="@+id/log_chk_recordar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_chk_recordar"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:textSize="16sp"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >
            <Button
                android:id="@+id/log_btn_ingresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/log_btn_ingresar"
                android:textAllCaps="false"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/green"
                />
            <Button
                android:id="@+id/log_btn_salir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/log_btn_salir"
                android:textAllCaps="false"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/black"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/log_lbl_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:textColor="#3F51B5"
            android:text="@string/log_lbl_registro"
            android:textSize="16sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center_horizontal"
            android:textSize="16sp"
            android:text="@string/log_lbl_copyright"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>