<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.IngredienteActivity"
    android:background="@drawable/fondo2colores"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ing_lbl_titulo_ingrediente"
            android:layout_marginTop="15dp"
            android:textColor="#150202"
            android:fontFamily="@font/bold"
            android:textSize="25sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">
            <EditText
                android:id="@+id/ing_txt_nombre_ingrediente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/ing_txt_nombre_ingrediente"
                android:inputType="text"
                android:maxLength="128"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp">
            <EditText
                android:id="@+id/ing_txt_cantidad_ingrediente"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/ing_txt_cantidad_ingrediente"
                android:inputType="number"
                android:maxLength="6"/>
            <Spinner
                android:id="@+id/ing_sp_unidad_medida"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">
            <Button
                android:id="@+id/ing_btn_agregar_ingrediente"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/ing_btn_agregar_ingrediente"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="20sp"
                android:layout_weight="1"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/ing_btn_mostrar_ingrediente"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="20sp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/ing_btn_mostrar_ingrediente"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom"
        >
        <Button
            android:id="@+id/ing_btn_continuar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ing_btn_continuar"
            android:textAllCaps="false"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/green"
            />
        <Button
            android:id="@+id/ing_btn_salir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ing_btn_salir"
            android:textAllCaps="false"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/black"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>