<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.OpcionesFragment"
    android:background="@drawable/fondo2colores"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/opc_lbl_titulo"
            android:layout_marginTop="15dp"
            android:textColor="#150202"
            android:fontFamily="@font/bold"
            android:textSize="25sp"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_round"
            android:layout_marginTop="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opc_lbl_nombres"
                android:textColor="#150202"
                android:fontFamily="@font/bold"
                android:textSize="18sp"
                >
            </TextView>
            <EditText
                android:id="@+id/opc_txt_cambiar_nombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="50"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opc_lbl_apellidos"
                android:textColor="#150202"
                android:fontFamily="@font/bold"
                android:textSize="18sp"
                >
            </TextView>
            <EditText
                android:id="@+id/opc_txt_cambiar_apellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="50"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opc_lbl_correo"
                android:textColor="#150202"
                android:fontFamily="@font/bold"
                android:textSize="18sp"
                >
            </TextView>
            <EditText
                android:id="@+id/opc_txt_cambiar_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="70"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opc_lbl_pais"
                android:textColor="#150202"
                android:fontFamily="@font/bold"
                android:textSize="18sp"
                >
            </TextView>
            <Spinner
                android:id="@+id/opc_sp_cambiar_pais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opc_lbl_tipo_documento"
                android:textColor="#150202"
                android:fontFamily="@font/bold"
                android:textSize="18sp"
                >
            </TextView>
            <Spinner
                android:id="@+id/opc_sp_cambiar_tipo_documento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opc_lbl_nro_documento"
                android:textColor="#150202"
                android:fontFamily="@font/bold"
                android:textSize="18sp"
                >
            </TextView>
            <EditText
                android:id="@+id/opc_txt_cambiar_nro_documento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="25"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        >
        <Button
            android:id="@+id/opc_btn_actualizar_datos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/opc_btn_actualizar_datos"
            android:backgroundTint="@color/teal_700"
            />
        <Button
            android:id="@+id/opc_btn_cerrar_sesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/opc_btn_cerrar_sesion"
            />
    </LinearLayout>
</FrameLayout>